# runwasi

./: .gitignore  Cargo.toml  Makefile  build.ps1  rust-toolchain.toml
.cargo/: config.toml
.github/scripts/: build-linux.sh  build-windows.sh
.github/workflows/: ci.yml
crates/containerd-shim-wasm/: Cargo.toml
crates/containerd-shim-wasm/src/: lib.rs  testing.rs
crates/containerd-shim-wasm/src/container/: engine.rs  mod.rs
crates/containerd-shim-wasm/src/libcontainer_instance/: container_executor.rs
crates/containerd-shim-wasm/src/sandbox/: cli.rs  containerd.rs  error.rs  exec.rs  instance.rs  instance_utils.rs  manager.rs  oci.rs  shim.rs  stdio.rs  testutil.rs
crates/containerd-shim-wasm/src/sandbox/cgroups/: cgroupv1.rs  cgroupv2.rs  mod.rs
crates/containerd-shim-wasm/src/sandbox/containerd/: client.rs
crates/containerd-shim-wasm/src/sandbox/shim/: instance_option.rs
crates/containerd-shim-wasm/src/sandbox/shim/local/: tests.rs
crates/containerd-shim-wasm/src/sys/unix/: mod.rs  stdio.rs
crates/containerd-shim-wasm/src/sys/unix/container/: instance.rs
crates/containerd-shim-wasm/src/sys/windows/: job.rs  mod.rs  stdio.rs
crates/containerd-shim-wasm/src/sys/windows/container/: instance.rs
crates/containerd-shim-wasmedge/: Cargo.toml
crates/containerd-shim-wasmedge/src/: executor.rs  instance.rs  lib.rs
crates/containerd-shim-wasmtime/: Cargo.toml
crates/containerd-shim-wasmtime/src/: executor.rs  instance.rs  lib.rs  oci_wasmtime.rs  tests_container.rs  tests_oci.rs
crates/containerd-shim-wasmtime/src/instance/: instance_windows.rs
crates/wasi-demo-app/: build.rs
crates/wasi-demo-app/src/: main.rs
crates/wasmtime/: Cargo.toml
crates/wasmtime/src/: instance.rs  oci_wasmtime.rs
docs/: windows-getting-started.md
scripts/: clean.ps1  cleanup.ps1
test/k8s/: Dockerfile.nightly
