[workspace]
members = [
    "crates/containerd-shim-wasm",
    "crates/wasi-demo-app",
    "crates/oci-tar-builder",
    "crates/wasmedge",
    "crates/wasmtime",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/containerd/runwasi"
homepage = "https://github.com/containerd/runwasi"


[workspace.dependencies]
anyhow = "1.0"
serde = "1.0"
serde_json = "1.0"
env_logger = "0.10"
log = "0.4"
tar = "0.4"
containerd-shim = {git = "https://github.com/containerd/rust-extensions", rev = "27a92fc606c10f848c72b6131278d392f677efc6" }
ttrpc = "0.7"
chrono = "0.4"
nix = "0.26"
cap-std = "0.26"
thiserror = "1.0"
libc = "0.2.138"
oci-spec = "0.6"
sha256 = "1.1"

[profile.release]
panic = "abort"
