[package]
name = "containerd-shim-wasm"
description = "Library for building containerd shims for wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true


[lib]
doctest = false

[dependencies]
containerd-shim = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
oci-spec = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
protobuf = "3.1"
ttrpc = { workspace = true }
nix = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
libc = { workspace = true }

[target.'cfg(unix)'.dependencies]
clone3 = "0.2"
command-fds = "0.2"
proc-mounts = "0.3"
caps = "0.5"

[build-dependencies]
ttrpc-codegen = { version = "0.4", optional = true }

[dev-dependencies]
tempfile = "3"
pretty_assertions = "1"
signal-hook = "0.3"
env_logger = { workspace = true }
rand = "0.8"

[features]
default = []
generate_bindings = ["ttrpc-codegen"]
