[package]
name = "containerd-shim-wasm"
description = "Library for building containerd shims for wasm"
version = "0.5.0"
edition.workspace = true
license.workspace = true
readme = "README.md"
homepage.workspace = true
repository.workspace = true

[lib]
doctest = false

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
containerd-shim = { workspace = true }
containerd-shim-wasm-test-modules = { workspace = true, optional = true }
oci-tar-builder = { workspace = true, optional = true }
crossbeam = { workspace = true }
env_logger = { workspace = true, optional = true }
git-version = "0.3.9"
libc = { workspace = true }
log = { workspace = true }
oci-spec = { workspace = true }
protobuf = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
ttrpc = { workspace = true }
wat = { workspace = true }
tokio = { version = "1.37.0", features = [ "full" ] }
futures = { version = "0.3.30" }
wasmparser = "0.204.0"
tokio-stream = { version = "0.1" }
prost-types = "0.12" # should match version in containerd-shim
sha256 = { workspace = true }
containerd-client = { git = "https://github.com/containerd/rust-extensions", branch = "main"}

[target.'cfg(unix)'.dependencies]
caps = "0.5"
# this must match the version pulled by libcontainer
dbus = { version = "0", features = ["vendored"] }
libcontainer = { workspace = true, features = ["libseccomp", "systemd", "v1", "v2"]}
nix = { workspace = true, features = ["sched", "mount"] }


[target.'cfg(windows)'.dependencies]
windows = { workspace = true, features= [
    "Win32_Foundation", 
    "Win32_System_Threading", 
    "Win32_Security",
    "Win32_System_JobObjects",
    "Win32_Storage_FileSystem"] }
power-process =  { git= "https://github.com/jsturtevant/power-process", rev= "b51411702260f090292d5cf920a2ef46aa48276c" }

[build-dependencies]
ttrpc-codegen = { version = "0.4.2" }

[dev-dependencies]
containerd-shim-wasm-test-modules = { workspace = true }
env_logger = { workspace = true }
tempfile = { workspace = true }
oci-tar-builder = { workspace = true}
rand= "0.8" 

[features]
testing = ["dep:containerd-shim-wasm-test-modules", "dep:env_logger", "dep:tempfile", "dep:oci-tar-builder"]
